pages/dkp/kommander/1.3/clusters/index.md
---
layout: layout.pug
beta: true
navigationTitle: Managing Clusters
title: Managing Clusters
menuWeight: 7
excerpt: View clusters created with Kommander or any connected Kubernetes cluster
---

## Create or connect a cluster

Kommander allows you to monitor and manage very large numbers of clusters, so it's easy to either connect existing clusters or create new clusters whose lifecycle is managed by Konvoy.

## Before you begin:

- You must have run `konvoy up` with the Kommander addon deployed. You should be looking at the Kommander UI.
- If you are creating a cluster with a cloud partner (Azure, AWS), you must configure your [infrastructure provider](/dkp/kommander/1.3/operations/infrastructure-providers/).
- If you are planning on attaching more than one cluster, ensure you enter your valid [license](/dkp/kommander/1.3/licensing/).

From the dashboard page or the clusters page, select **Add Cluster > Create Konvoy Cluster**.

![Add Cluster Options](/dkp/kommander/1.3/img/add-cluster.png)

### Create a Konvoy cluster

- [Creating Konvoy Clusters on AWS](/dkp/kommander/1.3/clusters/creating-konvoy-cluster-aws/)
- [Creating Konvoy Clusters on Azure](/dkp/kommander/1.3/clusters/creating-konvoy-cluster-azure/)
- [Creating Konvoy Clusters on your own infrastructure](/dkp/kommander/1.3/clusters/creating-konvoy-cluster-on-prem/)

### Connect an existing cluster

Using the Attach Cluster option, you can attach an already existing cluster, even an existing Konvoy cluster, directly to Kommander. Enjoy all the multi-cluster management and monitoring benefits that Kommander provides while keeping your existing cluster on its current provider and infrastructure.

See [Attach Cluster](/dkp/kommander/1.3/clusters/attach-cluster/)

### Create a Konvoy cluster via YAML

Selecting the **Upload YAML option** allows you to use a config generated by the Konvoy CLI tool. An example config can be created in the file `cluster.yaml` by [running](/dkp/konvoy/latest/reference/command-line-interface/konvoy-init/) `konvoy init`, or one is generated after running `konvoy up`. Ensure the correct Cloud Provider credentials are selected and add any cluster labels that apply.

![Create Cluster Upload YAML](/dkp/kommander/1.3/img/create-cluster-yaml.png)

#### Add infrastructure provider tags

A tag is similar to a label and helps manage and track this cluster at the infrastructure provider level along with other provider resources. As providers support different amounts of tags, up to 10 tags may be added here. You can add more directly through your infrastructure provider.

#### Cluster labels

Cluster labels are matched to the selectors created for [projects](/dkp/kommander/1.3/projects/). If a cluster is removed from a project, any resources deployed to the cluster from that Project are removed. If a cluster is added to a project, any existing project resources are deployed to the cluster.

##### Valid labels

- Valid labels must have a key and a value, separated by a colon and a space. For example, "env: dev". If you are creating the label through the UI, the space is automatically added when entering your values in the fields.
- Valid label keys and values must be alphanumeric and can contain “-”, “\_”, or “.”
- Valid label keys and values must not start or end with “-”, “\_”, or “.”

## Types

There are several types of clusters to be aware of in the Clusters tab.

- **Attached**: A cluster that was not created with Kommander. Attached clusters' lifecycle cannot be managed.
- **Managed**: A Konvoy cluster that was created with Kommander. Managed clusters' lifecycle can be managed.
- **Management**: The Konvoy cluster that hosts Kommander.

## Upgrade Kubernetes versions

You can upgrade Kubernetes versions on a running cluster from the Cluster Detail page (Figure 2.)
Select an available desired version from the Version dropdown and confirm your action in the confirmation dialog.

Figure 1:
![Update Kubernetes Version Action](/dkp/kommander/1.3/img/upgrade-kubernetes-action-1-1-0.png)
Figure 2:
![Update Kubernetes Version Action](/dkp/kommander/1.3/img/upgrade-kubernetes-confirmation-1-1-0.png)

## Edit a clusters

![Edit a Cluster Action](/dkp/kommander/1.3/img/edit-cluster-action.png)

### Edit an attached cluster

For an attached cluster, you can only edit labels that are assigned to it.

![Edit an Attached Cluster](/dkp/kommander/1.3/img/edit-cluster-attached-1-1-0.png)

### Edit a managed cluster

For a managed cluster, you can edit its name, Kubernetes version, labels, cloud provider tags, and its node pools.

![Edit a Cluster Form](/dkp/kommander/1.3/img/edit-cluster-form-name-1-1-0.png)

#### Edit a node pool

When editing a node pool, you can only increase the number of nodes in the pool. This is to prevent losing any workloads that are currently running on the cluster.

You can also add labels and taints to a node pool.

![Edit a Cluster Node Pools](/dkp/kommander/1.3/img/edit-cluster-node-pools.png)

#### Edit labels and cloud provider tags

When editing labels, you can not delete the region or provider labels.

![Edit a Cluster Labels and Cloud Provider Tags](/dkp/kommander/1.3/img/edit-cluster-labels-tags-1-1-0.png)

## Disconnect vs. delete

When you attach a cluster to Kommander that was not created with Kommander, you may later disconnect it. This does not alter the running state of the cluster, but simply removes it from the Kommander UI.

For managed clusters created with Kommander, disconnecting the cluster is not an option, but it can be deleted. This completely removes the cluster and all of its cloud assets.

<p class="message--warning"><strong>WARNING: </strong>
If you delete the management (Konvoy) cluster, you won't be able to use Kommander to delete the managed clusters that were created by Kommander. Be sure and delete any managed clusters before finally deleting the Konvoy cluster if your intention is to delete all clusters.
</p>

## Statuses

| Status         | Description                                                                                                                                                         |
| -------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Pending        | This is the initial state when a cluster is created or connected.                                                                                                   |
| Loading Data   | The cluster has been added to Kommander and we are fetching details about the cluster. This is the status before `Active`.                                          |
| Active         | The cluster is connected to API server                                                                                                                              |
| Provisioning\* | The cluster is being created on your cloud provider. This process can take a long time. To follow the progress of creation, select **View Logs** in the drop-down menu. |
| Joining        | Cluster is being joined to the management cluster for federation.                                                                                                   |
| Joined         | The join process is done, we wait for the first bit of data from the cluster to arrive                                                                              |
| Deleting       | Cluster is being deleted. This process may a long time.                                                                                                             |
| Error          | There has been an error connecting to the cluster or retrieving data from the cluster.                                                                              |
| Failed\*       | The cluster has failed to be provisioned. For more info on the failure, select **View Logs** in the drop-down menu.                                                     |
| Join Failed    | This can happen when kubefed does not have permission to create entities in the target cluster.                                                                     |
| Unjoining      | Kubefed cleans up after itself, removing all installed resources on the target cluster.                                                                             |
| Unjoined       | The cluster has been disconnected from the management cluster.                                                                                                      |
| Unjoin Failed  | Unjoining from kubefed failed or some other error with deleting or disconnecting.                                                                                   |
| Deleting       | The cluster and its resources are being removed from your cloud provider. Select **View Logs** in the drop-down menu to follow progress. This process may take a long time.  |
| Deleted        | The cluster and its resources have been removed from your cloud provider.                                                                                           |
| Provisioned\*  | The cluster has been created on your cloud provider.                                                                                                                |

\* These statuses only happen on Managed clusters

## Resources

![Cluster card with resources](/dkp/kommander/1.3/img/cluster-card.png)

Figure 1. A cluster card with resources

| Resource        | Description                                                                                                                                                   |
| --------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| CPU Requests    | The portion of the allocatable CPU resource that the cluster is requesting to be allocated. Measured in number of cores (e.g.: .5 cores)                      |
| CPU Limits      | The portion of the allocatable CPU resource that the cluster is limited to allocating. Measured in number of cores (e.g.: .5 cores)                           |
| CPU Usage       | How much of the allocatable CPU resource that is being consumed. Cannot be higher than the configured CPU limit. Measured in number of cores (e.g.: .5 cores) |
| Memory Requests | The portion of the allocatable memory resource that the cluster is requesting to be allocated. Measured in bytes (e.g.: 64 GiB)                               |
| Memory Limits   | The portion of the allocatable memory resource that the cluster is limited to allocating. Measured in bytes (e.g.: 64 GiB)                                    |
| Memory Usage    | How much of the allocatable memory resource that is being consumed. Cannot be higher than the configured memory limit. Measured in bytes (e.g.: 64 GiB)       |
| Disk Requests   | The portion of the allocatable ephemeral storage resource that the cluster is requesting to be allocated. Measured in bytes (e.g.: 64 GiB)                    |
| Disk Limits     | The portion of the allocatable ephemeral storage resource that the cluster is limited to allocating. Measured in bytes (e.g.: 64 GiB)                         |

For more detailed information, see the [Kubernetes documentation](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) about resources.

## Platform services

Services that have been installed on your management cluster. You can visit a cluster's detail page to see which platform services have been enabled under the "Addons" section.

![Cluster Detail Page](/dkp/kommander/1.3/img/cluster-detail-page.png)

You should also review the [workspace platform service resource requirements](/dkp/kommander/1.3/workspaces/platform-service-requirements/) to ensure that the attached clusters have sufficient resources. For more information on platform services and how to customize them, see [workspace platform services](/dkp/kommander/1.3/workspaces/workspace-platform-services/).

Figure 2. Cluster detail page

### Custom service cards

Custom service cards can be added to the cluster detail page's Addons section by creating a `ConfigMap` on the cluster. The `ConfigMap` must have a `d2iq.io/addon` label and must contain both `name` and `dashboardLink` data keys to be displayed. Upon creation of the `ConfigMap`, the GUI will show a card corresponding to the data provided in the `ConfigMap`. Custom cards have a Kubernetes icon and can link to a service running in the cluster or use an absolute URL to link to any accessible URL.

#### ConfigMap example

```yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: "my-service"
  namespace: "kommander"
  labels:
    "d2iq.io/addon": "my-service"
data:
  name: "My Service"
  dashboardLink: "/path/to/service"
```

| Key | Description | Required |
| :--- | :--- | :---: |
| metadata . labels . "d2iq.io/addon" | The platform service name (id) | X |
| data . name | The display name used to describe the service and shown on the Card in the GUI. | X |
| data . dashboardLink | The link to the service. This can be an absolute link "https://www.d2iq.com" or a relative link "/ops/portal". If a relative link is used, the link will be built using the cluster's path as the base of the URL to the service. | X |
| data . docsLink | Link to documentation about the service, this is displayed on the service card, but omitted if not present. | |
| data . category | Category to group the custom service with, if not provided the service is grouped under the category "None." | |
| data . version | A version string for the service, if not provided "N/A" is displayed on the service card in the GUI. | |

How to create a new custom service `ConfigMap`:

```bash
$ cat <<EOF | kubectl apply -f -
apiVersion: v1
kind: ConfigMap
metadata:
  name: "my-service"
  namespace: "kommander"
  labels:
    "d2iq.io/addon": "my-service"
data:
  name: "My Service"
  dashboardLink: "/path/to/service"
EOF
```

[k8s_resources]: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/
[k8s_docs]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
